[tool.poetry]
name = "net-van"
version = "0.1.0"
description = "Small and easy to use feed-forward ANN library."
authors = ["Vavrinec Kavan <vavrinec.kavan@gmail.com>"]
readme = "README.md"
packages = [{include = "src/net-van"}]

[tool.poetry.dependencies]
python = ">3.7 <3.11"
numpy = "^1.21.2"
glob2 = "*"
matplotlib = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
